# me176c-boot

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  README.md  build-esp.sh
bootstrap/: COPYING  README.md  acpi.c  acpi.h  gnvs.c  gnvs.h  main.c  meson.build  meson_options.txt  rsci.c  rsci.h
bootstrap/protocol/: AcpiTable.h  GlobalNvsArea.h
examples/charger-main-os/: README.md
examples/multi-boot/: README.md
examples/stock-charger/: README.md  charger.conf
loader/: loader.conf
loader/entries/: android.conf  charger.conf  fastboot.conf  recovery.conf
